fixed most of the container problem layout issues

--- a/css/application.css
+++ b/css/application.css
@@ -83,131 +83,6 @@ html {
   filter: grayscale(0%);
 }
 
-/* line 1, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
-footer {
-  background-color: #323544;
-  color: #fff;
-  position: relative;
-}
-
-/* line 8, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
-.footer-menu {
-  flex: 100%;
-  margin-bottom: 30px;
-}
-
-/* line 12, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
-.footer-menu h4 {
-  text-transform: uppercase;
-  font-size: 1rem;
-  margin-bottom: 26px;
-}
-
-/* line 23, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
-.footer-row li {
-  list-style-type: none;
-}
-
-/* line 31, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
-.bottom-footer {
-  position: relative;
-  display: flex;
-  width: 100%;
-  font-size: .8125rem;
-  background-color: #212330;
-}
-
-/* line 37, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
-.bottom-footer .bottom-footer-text {
-  display: flex;
-  flex-direction: column;
-  padding: 10px 0px 10px 15px;
-}
-
-/* line 45, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
-.bottom-anchor {
-  text-decoration: none;
-  /* Removes the underline */
-  color: inherit;
-}
-
-/* line 48, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
-.bottom-anchor:hover {
-  text-decoration: underline;
-  /* Adds underline on hover */
-}
-
-/* line 55, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
-.footer-follow-links {
-  display: flex;
-  flex: row;
-  font-size: 26px;
-  margin-bottom: 30px;
-}
-
-/* line 60, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
-.footer-follow-links a {
-  padding: 12px 22px 16px;
-  margin-right: 10px;
-  background-color: #212330;
-  color: #fff;
-  text-decoration: none;
-}
-
-/* line 70, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
-.footer-ul {
-  padding: 0px;
-}
-
-/* line 73, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
-.footer-ul li {
-  font-size: .8125rem;
-  line-height: 1.375rem;
-}
-
-/* line 79, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
-.netmatters-footer-info {
-  padding-top: 27px;
-}
-
-@media (min-width: 768px) {
-  /* line 93, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
-  .footer-row {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  /* line 98, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
-  .footer-row .footer-menu-main {
-    display: grid;
-    grid-template: repeat(2, auto)/repeat(2, 1fr);
-  }
-  /* line 103, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
-  .footer-row .bottom-footer-text {
-    flex-direction: row;
-    align-items: center;
-    gap: 5px;
-  }
-  /* line 110, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
-  .bottom-footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-@media (min-width: 992px) {
-  /* line 120, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
-  .footer-row {
-    flex: 25%;
-  }
-  /* line 124, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
-  .footer-row .footer-menu-main {
-    display: grid;
-    grid-template: repeat(2, auto)/repeat(4, 1fr);
-  }
-}
-
 /* line 1, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_layouts.scss */
 body {
   margin: 0;
@@ -228,6 +103,8 @@ div {
 
 /* line 16, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_layouts.scss */
 .container {
+  margin-right: auto;
+  margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -250,6 +127,132 @@ div {
   /* line 16, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_layouts.scss */
   .container {
     width: 1200px;
+  }
+}
+
+/* line 1, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
+footer {
+  background-color: #323544;
+  color: #fff;
+  position: relative;
+}
+
+/* line 8, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
+.footer-menu {
+  flex: 100%;
+  margin-bottom: 30px;
+}
+
+/* line 12, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
+.footer-menu h4 {
+  text-transform: uppercase;
+  font-size: 1rem;
+  margin-bottom: 26px;
+  margin-top: 0px;
+}
+
+/* line 23, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
+.footer-row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/* line 26, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
+.footer-row li {
+  list-style-type: none;
+}
+
+/* line 34, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
+.bottom-footer {
+  display: flex;
+  justify-content: space-between;
+  font-size: .8125rem;
+  padding-top: 10px;
+  width: 100%;
+  left: 0;
+  background: #212330;
+  border: 0;
+}
+
+/* line 43, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
+.bottom-footer .bottom-footer-text {
+  display: flex;
+  flex-direction: column;
+  padding-top: 10px;
+  color: #fff;
+}
+
+/* line 52, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
+.bottom-anchor {
+  text-decoration: none;
+  color: inherit;
+}
+
+/* line 55, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
+.bottom-anchor:hover {
+  text-decoration: underline;
+}
+
+/* line 62, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
+.footer-follow-links {
+  display: flex;
+  flex: row;
+  font-size: 26px;
+  margin-bottom: 30px;
+}
+
+/* line 67, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
+.footer-follow-links a {
+  padding: 12px 22px 16px;
+  margin-right: 10px;
+  background-color: #212330;
+  color: #fff;
+  text-decoration: none;
+}
+
+/* line 77, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
+.footer-ul {
+  padding: 0px;
+}
+
+/* line 80, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
+.footer-ul li {
+  font-size: .8125rem;
+  line-height: 1.375rem;
+}
+
+/* line 86, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
+.netmatters-footer-info {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  padding-top: 27px;
+}
+
+/* line 93, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
+.footer-main-logo {
+  width: 320px;
+}
+
+@media (min-width: 768px) {
+  /* line 106, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
+  .footer-row {
+    display: flex;
+    flex-direction: column;
+    display: grid;
+    grid-template: repeat(2, auto)/repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 992px) {
+  /* line 121, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
+  .footer-row {
+    flex: 25%;
+  }
+  /* line 125, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_footer.scss */
+  .footer-row .footer-menu-main {
+    display: grid;
+    grid-template: repeat(2, auto)/repeat(4, 1fr);
   }
 }
 
@@ -1018,7 +1021,7 @@ p {
   }
 }
 
-@media (min-width: 992px) and (max-wdith: 1259px) {
+@media (min-width: 992px) and (max-width: 1259px) {
   /* line 328, ../../../../../Nettmaters_main/assessments/websiteNew/scss/layout/_services-section.scss */
   .services-section {
     width: 100%;
