--- a/scss/layout/_layouts.scss
+++ b/scss/layout/_layouts.scss
@@ -14,6 +14,8 @@ div {
 }
 
 .container {
+    margin-right: auto;
+    margin-left: auto;
     padding-left: 15px;
     padding-right: 15px;
 
