--- a/scss/layout/_services-section.scss
+++ b/scss/layout/_services-section.scss
@@ -323,7 +323,7 @@
 
 }
 
-@media (min-width: 992px) and (max-wdith: 1259px){
+@media (min-width: 992px) and (max-width: 1259px){
 
     .services-section {
         width: 100%;
